# embeddable-activities

./: .gitignore  README.md  app.py  pyproject.toml
embeddable_activities/: __init__.py  __main__.py  app.py  db.py  models.py
example_activities/: multiple-choice.html  multiple-choice.js
static/: index.html  multiple-choice.js  multiple-choice.json
tests/: conftest.py  test_app.py
